# rnic-copro-analytics

./: .gitignore  .pre-commit-config.yaml  .sqlfluff  Makefile  README.md  docker-compose.metabase.yml  pyproject.toml
.agents/skills/building-dbt-semantic-layer/: SKILL.md
.agents/skills/using-dbt-state/: SKILL.md
metabase/: Dockerfile
rnic_dbt/: .user.yml  Makefile  dbt_project.yml  profiles.yml
rnic_dbt/macros/: load_rnic_csv_file.sql
rnic_dbt/models/bronze/: rnic2022.sql  rnic2023.sql  rnic2024.sql  rnic2025.sql  rnic_2022_t2.sql  rnic_2022_t3.sql  rnic_2022_t4.sql  rnic_2023_t1.sql  rnic_2023_t2.sql  rnic_2023_t3.sql  rnic_2023_t4.sql  rnic_2024_t1.sql  rnic_2024_t2.sql  rnic_2024_t3.sql  rnic_2024_t4.sql  rnic_2025_t1.sql  rnic_2025_t2.sql  rnic_2025_t3.sql  rnic_2025_t4.sql  sources.yml
rnic_dbt/models/silver/: schema.yml  silver_rnic.sql
