[project]
name = "rnic-copro-analytics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dbt>=2.0.0rc200",
    "ipykernel>=7.2.0",
    "pandas>=2.3.3",
    "pip>=26.0.1",
    "pre-commit>=4.5.1",
    "sqlfluff>=3.4.2",
    "sqlfluff-templater-dbt>=3.4.2",
]
